change formTamu pages

--- a/formTamuKesekretariatan.html
+++ b/formTamuKesekretariatan.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buku Presensi Tamu Pimpinan</title>
+    <title>Buku Presensi Tamu Kesekretariatan</title>
     <link rel="stylesheet" href="/public/css/output.css" />
   </head>
   <body class="bg-white w-full min-h-screen flex flex-col">
@@ -26,7 +26,7 @@
         </button>
 
         <!-- Title -->
-        <h1 class="font-semibold text-black text-2xl sm:text-3xl lg:text-4xl text-center mb-8 sm:mb-12">Buku Presensi Tamu Pimpinan</h1>
+        <h1 class="font-semibold text-black text-2xl sm:text-3xl lg:text-4xl text-center mb-8 sm:mb-12">Buku Presensi Tamu Kesekretariatan</h1>
 
         <!-- Form -->
         <form class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-[46px] mb-8 sm:mb-12" enctype="multipart/form-data" method="POST" action="#">
