--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
           <h3 class="font-medium text-black text-lg text-center mb-2">Tamu Kepaniteraan</h3>
           <p class="text-[#666666] text-sm text-center mb-6">Presensi bagi tamu-tamu kepaniteraan Pengadilan Agama Gorontalo</p>
-          <a href="#" class="w-full max-w-[290px] bg-[#1d4c08] hover:bg-[#2a6b0c] text-white py-2 rounded-full flex justify-center items-center gap-2">
+          <a href="formTamuKepaniteraan.html" class="w-full max-w-[290px] bg-[#1d4c08] hover:bg-[#2a6b0c] text-white py-2 rounded-full flex justify-center items-center gap-2">
             <span>Presensi</span>
             <img src="public/images/arrow-1.svg" alt="Arrow" class="w-[12px] h-[12px]" />
           </a>
@@ -84,7 +84,7 @@
           </div>
           <h3 class="font-medium text-black text-lg text-center mb-2">Tamu Kesekretariatan</h3>
           <p class="text-[#666666] text-sm text-center mb-6">Presensi bagi tamu-tamu kesekretariatan Pengadilan Agama Gorontalo</p>
-          <a href="#" class="w-full max-w-[290px] bg-[#1d4c08] hover:bg-[#2a6b0c] text-white py-2 rounded-full flex justify-center items-center gap-2">
+          <a href="formTamuKesekretariatan.html" class="w-full max-w-[290px] bg-[#1d4c08] hover:bg-[#2a6b0c] text-white py-2 rounded-full flex justify-center items-center gap-2">
             <span>Presensi</span>
             <img src="public/images/arrow-1.svg" alt="Arrow" class="w-[12px] h-[12px]" />
           </a>
