add feature upload  form

--- a/formTamuKepaniteraan.html
+++ b/formTamuKepaniteraan.html
@@ -83,6 +83,27 @@
 
             <img src="public/images/divider-line.svg" alt="Divider" class="w-full h-px object-cover" />
           </div>
+          <div class="max-w-3xl mx-auto mt-6">
+    <div class="flex items-start gap-3 rounded-md border border-green-400 bg-green-50 px-5 py-4 text-green-800">
+      <!-- Icon -->
+      <div class="flex-shrink-0">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <circle cx="12" cy="12" r="10" stroke-width="1.5"/>
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M8 12l2.5 2.5L16 9"/>
+        </svg>
+      </div>
+
+      <!-- Text content -->
+      <div class="flex flex-col">
+        <span class="font-semibold text-green-700">Success Message</span>
+        <p class="text-red-500 font-bold">Test Tailwind</p>
+        <span class="text-sm text-green-700">
+          You can insert a description for the message here. The text relates to the action that has been performed.
+        </span>
+      </div>
+    </div>
+  </div>
+
         </form>
 
         <!-- Submit -->
